hw4/part1
shell_examples.txt:
>>> spam = "That is Alice's cat."

>>> spam = 'Say hi to Bob\'s mother.'

>>> print ("Hello there!\nHow are you?\nI\'m doing fine.")
Hello there!
How are you?
I'm doing fine.

>>> print (r'That is Carol\'s cat.')
That is Carol\'s cat.

 >>> spam = 'Hello, World!'

In [4]: >>> spam[0]
Out[4]: 'H'

In [5]: >>> spam[4]
Out[5]: 'o'

In [6]: >>> spam[-1]
Out[6]: '!'

In [7]: >>> spam[0:5]
Out[7]: 'Hello'

In [8]: >>> spam[:5]
Out[8]: 'Hello'

In [9]: >>> spam[7:]
Out[9]: 'World!'

>>> spam = 'Hello, world!'
>>> fizz = spam[0:5]
>>> fizz
'Hello'

 >>> 'Hello' in 'Hello, World'
True
>>> 'Hello' in 'Hello'
True
>>> 'HELLO' in 'Hello, World'
False
>>> '' in 'spam'
True
>>> 'cats' not in 'cats and dogs'
False

>>> name = 'Al'
>>> age = 4000
>>> 'My name is %s. I am %s years old.' % (name, age)
'My name is Al. I am 4000 years old.'

>>> name = 'Al'
>>> age = 4000
>>> f'My name is {name}. Next year I will be {age + 1}.'
'My name is Al. Next year I will be 4001.'
'
>>> spam = 'Hello, world!'
>>> spam = spam.upper()
>>> spam
'HELLO, WORLD!'
>>> spam = spam.lower()
>>> spam
'hello, world!'

>>> spam = 'Hello, world!'
>>> spam.islower()
False
>>> spam.isupper()
False
>>> 'HELLO'.isupper()
True
>>> 'abc12345'.islower()
True
>>> '12345'.islower()
False
>>> '12345'.isupper()
False

>>> 'Hello'.upper()
'HELLO'
>>> 'Hello'.upper().lower()
'hello'
>>> 'Hello'.upper().lower().upper()
'HELLO'
>>> 'HELLO'.lower()
'hello'
>>> 'HELLO'.lower().islower()
True

>>> 'hello'.isalpha()
True
>>> 'hello123'.isalpha()
False
>>> 'hello123'.isalnum()
True
>>> 'hello'.isalnum()
True
>>> '123'.isdecimal()
True
>>> '    '.isspace()
True
>>> 'This Is Title Case'.istitle()
True
>>> 'This Is Title Case 123'.istitle()
True
>>> 'This Is not Title Case'.istitle()
False
>>> 'This Is NOT Title Case Either'.istitle()
False

>>> 'Hello, world!'.startswith('Hello')
True
>>> 'Hello, world!'.endswith('world!')
True
>>> 'abc123'.startswith('abcdef')
False
>>> 'abc123'.endswith('12')
False
>>> 'Hello, world!'.startswith('Hello, world!')
True
>>> 'Hello, world!'.endswith('Hello, world!')
True

>>> ', '.join(['cats', 'rats', 'bats'])
'cats, rats, bats'
>>> ' '.join(['My', 'name', 'is', 'Simon'])
'My name is Simon'
>>> 'ABC'.join(['My', 'name', 'is', 'Simon'])
'MyABCnameABCisABCSimon'

>>> 'My name is Simon'.split()
['My', 'name', 'is', 'Simon']

>>> 'MyABCnameABCisABCSimon'.split('ABC')
['My', 'name', 'is', 'Simon']
>>> 'My name is Simon'.split('m')
['My na', 'e is Si', 'on']

>>> spam = '''Dear Alice,
How have you been? I am fine.
There is a container in the fridge
that is labeled "Milk Experiment."

Please do not drink it.
Sincerely,
Bob'''
>>> spam.split('\n')
['Dear Alice,', 'How have you been? I am fine.', 'There is a container in the
fridge', 'that is labeled "Milk Experiment."', '', 'Please do not drink it.',
'Sincerely,', 'Bob']
 File "<ipython-input-67-1453e18ff5b0>", line 2
    ['Dear Alice,', 'How have you been? I am fine.', 'There is a container in the
                                                                                 ^
SyntaxError: EOL while scanning string literal

>>> 'Hello, world!'.partition('w')
('Hello, ', 'w', 'orld!')
>>> 'Hello, world!'.partition('world')
('Hello, ', 'world', '!')

>>> 'Hello'.rjust(10)
'     Hello'
>>> 'Hello'.rjust(20)
'              Hello'
>>> 'Hello, World'.rjust(20)
'         Hello, World'
>>> 'Hello'.ljust(10)
'Hello     '

>>> 'Hello'.rjust(20, '*')
'***************Hello'
>>> 'Hello'.ljust(20, '-')
'Hello---------------'

>>> 'Hello'.center(20)
'       Hello        '
>>> 'Hello'.center(20, '=')
'=======Hello========'

>>> spam = '    Hello, World    '
>>> spam.strip()
'Hello, World'
>>> spam.lstrip()
'Hello, World    '
>>> spam.rstrip()
'    Hello, World'

>>> spam = 'SpamSpamBaconSpamEggsSpamSpam'
>>> spam.strip('ampS')
'BaconSpamEggs'

>>> ord('A')
65
>>> ord('4')
52
>>> ord('!')
33
>>> chr(65)
'A'

>>> import pyperclip
>>> pyperclip.copy('Hello, world!'
>>> pyperclip.paste()
'Hello, world!'



catnapping.py:
 print('''Dear Alice,
   ...:
   ...: Eve's cat has been arrested for catnapping, cat burglary, and extortion.
   ...:
   ...: Sincerely,
   ...: Bob''')
Dear Alice,

Eve's cat has been arrested for catnapping, cat burglary, and extortion.

Sincerely,
Bob

how_are_you.py


In [6]: print('How are you?')
   ...: feeling = input()
   ...: if feeling.lower() == 'great':
   ...:     print('I feel great too.')
   ...: else:
   ...:     print('I hope the rest of your day is good.')
   ...:
How are you?

I hope the rest of your day is good.

if __name__=="__main__":
    main()
    
validateInput.py:
while True:
         print('Enter your age:')
        age = input()
         if age.isdecimal():
             break
         print('Please enter a number for your age.')
    
     while True:
         print('Select a new password (letters and numbers only):')
         password = input()
         if password.isalnum():
             break
      print('Passwords can only have letters and numbers.')

if __name__ = '__main__':
    main()
    
picnicTable.py:
def printPicnic(itemsDict, leftWidth, rightWidth):
   ...:     print('PICNIC ITEMS'.center(leftWidth + rightWidth, '-'))
   ...:     for k, v in itemsDict.items():
   ...:         print(k.ljust(leftWidth, '.') + str(v).rjust(rightWidth))
   ...:
   ...: picnicItems = {'sandwiches': 4, 'apples': 12, 'cups': 4, 'cookies': 8000}
   ...: printPicnic(picnicItems, 12, 5)
   ...: printPicnic(picnicItems, 20, 6)

if __name__ = '__main__':
    main()
